Update Matrix class

--- a/Homework3/CS580HW3.vcxproj.filters
+++ b/Homework3/CS580HW3.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="rendVertexSorter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rendMatrixOperator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rendMatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="CS580HW.rc">
@@ -104,6 +110,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rendVertexSorter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rendMatrixOperator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rendMatrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
