--- a/Homework3/CS580HW3.vcxproj
+++ b/Homework3/CS580HW3.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="rend.cpp" />
     <ClCompile Include="rendDigitalDifferentialAnalyzer.cpp" />
+    <ClCompile Include="rendMatrix.cpp" />
     <ClCompile Include="rendMatrixOperator.cpp" />
     <ClCompile Include="rendVertexSorter.cpp" />
     <ClCompile Include="RotateDlg.cpp" />
@@ -164,6 +165,7 @@
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="rend.h" />
     <ClInclude Include="rendDigitalDifferentialAnalyzer.h" />
+    <ClInclude Include="rendMatrix.h" />
     <ClInclude Include="rendMatrixOperator.h" />
     <ClInclude Include="rendVertexSorter.h" />
     <ClInclude Include="Resource.h" />
