--- a/Homework3/CS580HW3.vcxproj.filters
+++ b/Homework3/CS580HW3.vcxproj.filters
@@ -135,4 +135,7 @@
       <Filter>Resource Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
 </Project>
